# support-ticket-openenv

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py
data/: tickets.py
env/: models.py  support_env.py
graders/: graders.py
scripts/: baseline_agent.py  inference.py
server/: app.py
