[project]
name = "support-ticket-openenv"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "huggingface_hub",
    "openenv-core"
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
entrypoint = "server.app:main"